fix: overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .hazir-map {
-    width: calc(100% - 12rem);
+    width: calc(100% - 6rem);
     border-radius: 15px;
   }
 }
